Now shows item icon next to item text. new BlockEntry class for this.